--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "backend": "json-server --watch back/db.json "
+    "backend": "json-server --watch back/db.json",
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src",
+    "format": "prettier . --write"
   },
   "dependencies": {
     "axios": "^1.6.7",
@@ -17,6 +19,10 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.3.1",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-vue": "^9.23.0",
+    "prettier": "3.2.5",
     "sass": "^1.71.1",
     "sass-loader": "^14.1.1",
     "vite": "^4.4.9"
